Resolve confict
